Updating git modules to use http

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lcd-domains/libcap"]
 	path = lcd-domains/libcap
-	url = git@gitlab.flux.utah.edu:xcap/libcap.git
+	url = https://gitlab.flux.utah.edu/xcap/libcap.git
 [submodule "lcd-domains/libasync"]
 	path = lcd-domains/libasync
-	url = git@gitlab.flux.utah.edu:xcap/xcap-async-module.git
+	url = https://gitlab.flux.utah.edu/xcap/xcap-async-module.git
